# Gps-mobiles

./: README.md
build-gps_application-Android_Qt_6_5_2_Clang_arm64_v8a-Debug/: CMakeCache.txt  android-appgps_application-deployment-settings.json  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-gps_application-Android_Qt_6_5_2_Clang_arm64_v8a-Debug/.qt/: QtDeploySupport.cmake
build-gps_application-Android_Qt_6_5_2_Clang_arm64_v8a-Debug/.qtc_clangd/: compile_commands.json
build-gps_application-Android_Qt_6_5_2_Clang_arm64_v8a-Debug/.rcc/: qmake_gps_application.qrc
build-gps_application-Android_Qt_6_5_2_Clang_arm64_v8a-Debug/gps_application/: appgps_application_qml_module_dir_map.qrc
build-gps_application-Android_Qt_6_5_2_Clang_arm64_v8a-Debug/qmltypes/: appgps_application_foreign_types.txt
build-gps_application-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appgps_application_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-gps_application-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-gps_application-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appgps_application.cmake  Qt6_QmlPlugins_Imports_appgps_application.rsp
build-gps_application-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
gps_application/: CMakeLists.txt  GPS_Application.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml  map.qml.autosave  qml.qrc
(+380 files in other folders)
